# LearnDemo

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
C++/: C++.sln
C++/demo_DesignMode/: abstract_factory.h  adapter_comb.cpp  adapter_comb.h  adapter_derive.cpp  adapter_derive.h  agency.h  bridge.cpp  builder.cpp  builder.h  chain_of_responsibility.cpp  chain_of_responsibility.h  composite.cpp  composite.h  decorative.cpp  demo_DesignMode.cpp  demo_DesignMode.vcxproj  demo_DesignMode.vcxproj.filters  factory.h  flyweight.cpp  mediator.cpp  memo.cpp  memo.h  observer.cpp  observer.h  prototype.cpp  public.cpp  public.h  simple_factory.cpp  simple_factory.h  singleton_lazy_reference_nosafe.cpp  strategy.cpp  strategy.h  strategy_by_founction.cpp  strategy_by_founction.h  template_mode.h
common/inc/: logyapi.h  utily.h  yretcode.h
common/inc/Poco/Net/: Context.h
common/inc/avapi/: avapi.h  napi.h
common/inc/librmfs5.0/: rmfs_nxm_struct.h
common/inc/rmfs4.0/: api_rmfs.h  rmfs_n9m_config.h  rmfs_n9m_struct.h
common/lib/: logy.lib
common/lib/gpu/: gpumon32.lib.bak
common/lib/x64/: libutilY.lib  logy.lib
common/lib/x64/Poco/: PocoCrypto.lib  PocoCryptod.lib  PocoNetSSL.lib  PocoNetSSLd.lib
common/lib/x64/avapi/: avapi.lib  napi.lib
common/lib/x64/ffmpeg/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
common/lib/x64/librmfs5.0/: rmfs5.0.exp  rmfs5.0.lib
common/lib/x64/librmfs5.0/include/: api_rmfs_nxm.h  rmfs_n9m_config.h  rmfs_nxm_struct.h
common/lib/x64/openssl/lib/: libapps.lib  libtestutil.lib
common/lib/x64/rmfs4.0/: rmfs4.0.lib
common/lib/x86/: libutilY.lib  logy.lib
common/lib/x86/ffmpeg/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
src/DesignMode/: CMakeLists.txt  demo_DesignMode.cpp  public.cpp  public.h
src/DesignMode/inc/: bridge.h  chain_of_responsibility.h  decorative.h  facade.h  factory.h  flyweight.h  mediator.h  observer.h  prototype.h  singleton_hungry_safe.h  singleton_lazy_nosafe.h  singleton_lazy_reference_nosafe.h  singleton_lazy_safe.h
src/DesignMode/src/: abstract_factory.cpp  agency.cpp  builder.cpp  chain_of_responsibility.cpp  composite.cpp  facade.cpp  factory.cpp  flyweight.cpp  mediator.cpp  memo.cpp  observer.cpp  prototype.cpp  singleton_hungry_safe.cpp  singleton_lazy_nosafe.cpp  singleton_lazy_safe.cpp  template_mode.cpp
src/FFmpegGpu/: CMakeLists.txt  hard_decoder.cpp  hard_decoder.h  main.cpp  public.h
src/FFmpegGpuQtPlayer/: CMakeLists.txt  FFmpegGpuQtPlayer.pro  cdecode_hard.cpp  cdecode_hard.h  cdemux.cpp  cdemux.h  cmainwin.cpp  cmainwin.h  cmainwin.ui  csws.cpp  generate_ui.bat  idecode.cpp  idecode.h  irender.cpp  irender.h  main.cpp  moc_cmainwin.cpp  moc_cplayframe.cpp  public.h  ui_cmainwin.h
src/FFmpegGpuQtPlayer/core/: D3DVidRender.cpp  D3DVidRender.h  cd3d_dxva2_render.cpp  cd3d_dxva2_render.h  cd3dx_spirte_render.cpp  cd3dx_spirte_render.h  cdecode_dxva2.cpp  cdecode_hard.cpp  cdecode_hard.h  cdemux.cpp  csws.cpp  csws.h  ffmpeg_dxva2.cpp  ffmpeg_dxva2.h  idecode.cpp  idecode.h  irender.h
src/FFmpegGpuQtPlayer/play/: cplay_thread.cpp  cplay_thread.h
src/FFmpegGpuQtPlayer/ui/: cmainwin.cpp  cmainwin.h  cmainwin.ui  cplayframe.cpp  cplayframe.h  cplayframe.ui  moc_cmainwin.cpp  ui_cmainwin.h  ui_cplayframe.h
src/GpuCmd/: CMakeLists.txt  gpucmd.cpp  gpucmd.h  main.cpp
src/HttpServer/: CMakeLists.txt
src/LogY/: CMakeLists.txt  logy.cpp  logy.h  logyapi.cpp  logyapi.h
src/Network/: CMakeLists.txt  main.cpp  public.h
src/Network/src/: netbase.cpp  netbase.h  tcp_client.cpp  tcp_client.h  tcp_reactor.cpp  tcp_reactor.h  tcp_server.cpp  tcp_server.h  windows_net.cpp  windows_net.h
src/Network/src/select/: test_select.h
src/S17Test/: CMakeLists.txt  aes-gcm-256.h  base64.h  fastpbkdf2.h  main.cpp  public_inc.h
src/TcpClient/: CMakeLists.txt  main.cpp
src/TcpServer/: CMakeLists.txt  main.cpp
src/TemplateProject/: CMakeLists.txt
src/TemplateProject/src/: main.cpp  test.cpp  test.rc  test2.cpp
src/TemplateProject/src/subdir/: test3.cpp  test3.h
src/Test/: CMakeLists.txt  main.cpp  public.h  test.cpp  test.h
src/Test/src/smart_pointers/: my_smart_ptr.h  std_ptr.cpp  std_ptr.h
src/Test/src/thread/: std_thread.cpp  std_thread.h
src/Test/thread/: std_thread.cpp
src/TestAvapi32/: CMakeLists.txt  main.cpp
src/TestAvapi64/: CMakeLists.txt  main.cpp  public.h
src/TestHardDecoder/: CMakeLists.txt  cd3d_dxva2_render.cpp  cdecode_dxva2.cpp  cdecode_dxva2.h  cdemux.h  idecode.cpp  idecode.h  main.cpp  public.h
src/UtilY/: CMakeLists.txt  utily.cpp
src/Utils/: CMakeLists.txt  basic_string.cpp
src/WebsocketServer/: CMakeLists.txt
src/common/: common_def.h
